added a new service for health checks and added corresponding endpoints for health status in all 4 services
