# Storage/app.py
@@ -170,7 +170,8 @@ def process_messages():
         # Commit the new message as being read
         consumer.commit_offsets()
 
-
+def get_health():
+    return 200
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yaml", base_path="/storage", strict_validation=True, validate_responses=True)
